--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="js/bootstrap.min.js"></script>
+    {% block css %}{% endblock css %}
     <title>Django</title>
 </head>
 <body>
     Render Manager <br>
     {% block container %}{% endblock container %}
+    <!-- {% block script %}{% endblock script %} -->
 </body>
 </html>
